fixed spacing

--- a/less/index.less
+++ b/less/index.less
@@ -217,6 +217,7 @@ margin-left: 20px;
 .picCol{
   height: 600px;
 
+
 }
 .villas{
   left:300px;
@@ -252,4 +253,7 @@ margin-left: 10px;
 }
 .tab-active{
   display:flex;
+}
+.newpicCol{
+  height: 300px;
 }
